searching on month and year at the same time

--- a/Views/Shared/_search.cshtml
+++ b/Views/Shared/_search.cshtml
@@ -11,6 +11,6 @@
 </form> *@
 <form method="Post" action="@Url.Action("MonthData", "Home")">
     <label for="smonth">Enter Month:</label>
-    <input type="text" name="smonth" id="smonth" />
+    <input type="Date" name="smonth" id="smonth" />
     <input type="submit" value="Filter" />
 </form>
